# fastapi_project

./: .env.example  .gitignore  README.md  db.py  docker-compose.yml  pyproject.toml
app/: config.py  crud.py  database.py  main.py  models.py
app/api/: api_enrollment.py  dependencies.py
app/config/: azure_keyvault_config.py  db_config.py  jwt_config.py  su_config.py
app/constansts/: constants_account_type.py  constants_payment_status_type.py  constants_role.py  constants_session.py  constants_status_type.py
app/core/: exceptions.py  security.py
app/crud/: __init__.py  base.py  crud_account_type.py  crud_bank.py  crud_base.py  crud_employee.py  crud_employee_account.py  crud_employer.py  crud_employer_payment_method.py  crud_employer_type.py  crud_payment_history.py  crud_payment_status_type.py  crud_role.py  crud_session.py  crud_status_type.py  crud_user.py
app/db/: get_database.py  init_db.py  models.py  session.py
app/manager/: employer.py  manager_abstract.py  manager_account_type.py  manager_auth.py  manager_bank.py  manager_base.py  manager_employee.py  manager_employee_account.py  manager_employer.py  manager_employer_payment_method.py  manager_employer_type.py  manager_payment_history.py  manager_payment_status_type.py  manager_role.py  manager_status_type.py  mananger_employee_account.py
app/schemas/: base.py  employee.py  employer.py  employer_type.py  role.py  schema.py  schema_bank.py  schema_employee_account.py  schema_employer_payment_method.py  schema_payment_history.py  session.py  status_type.py  user.py  validators.py
(+114 files in other folders)
