[tool.poetry]
name = "fastapi_project"
version = "0.1.0"
description = ""
authors = ["Yaroslav Farkash <farkashyaroslav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyodbc = "^4.0.34"
fastapi = "^0.79.0"
mssql = "^1.0.1"
SQLAlchemy = "^1.4.39"
email-validator = "^1.2.1"
pydantic = "^1.9.1"
uvicorn = "^0.18.2"
python-dotenv = "^0.20.0"
python-multipart = "^0.0.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-utils = "^0.2.1"
itsdangerous = "^2.1.2"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
requests = "^2.28.1"
pytest-mock = "^3.8.2"
mock = "^4.0.3"
black = "^22.10.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core==1.1.14"]
build-backend = "poetry.core.masonry.api"
